--- a/.github/workflows/build-windows.yml
+++ b/.github/workflows/build-windows.yml
@@ -14,13 +14,9 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        version: [6.2.4, 6.5.3, 6.8.3, 6.9.1]
+        version: [6.8.3, 6.9.1]
         arch: [win64_msvc2019_64, win64_msvc2022_64, win64_mingw]
         exclude:
-          - version: 6.2.4
-            arch: win64_msvc2022_64
-          - version: 6.5.3
-            arch: win64_msvc2022_64
           - version: 6.8.3
             arch: win64_msvc2019_64
           - version: 6.8.3
