--- a/.github/workflows/build-daily.yml
+++ b/.github/workflows/build-daily.yml
@@ -43,7 +43,7 @@ jobs:
         gh release delete continuous -y || true
     - name: Create Release
       run: |
-        gh release create continuous --title "Continuous Build" --notes "Daily build of xTools"
+        gh release create continuous --title "Continuous Build" --notes "Daily build of xFlow"
   release-for-windows:
     runs-on: windows-2022
     needs: update-release
@@ -66,12 +66,12 @@ jobs:
         cd build
         call "C:\Program Files\Microsoft Visual Studio\2022\Enterprise\VC\Auxiliary\Build\vcvarsall.bat" x64
         cmake -DCMAKE_PREFIX_PATH='${{ github.workspace }}/Qt/${{env.QT_VERSION}}/win64_msvc2022_64' -DCMAKE_BUILD_TYPE=Release -G "Ninja" ../
-        cmake --build . --target xTools
-        cmake --build . --target xTools_zip
+        cmake --build . --target xFlow
+        cmake --build . --target xFlow_zip
     - name: Upload Release Asset for Windnows
       shell: cmd
       run: |
-        for %%f in (bin\Windows\Release\xTools-zip\*.zip) do gh release upload continuous "%%f"
+        for %%f in (bin\Windows\Release\xFlow-zip\*.zip) do gh release upload continuous "%%f"
   release-for-linux:
     runs-on: ubuntu-22.04
     needs: update-release
@@ -86,8 +86,8 @@ jobs:
     - name: Upload Release Asset for Linux
       run: |
         dir bin/Linux/Release
-        find bin/Linux/Release/xTools-linux -name "*.deb" -exec gh release upload continuous {} \;
-        find bin/Linux/Release/xTools-linux -name "*.AppImage" -exec gh release upload continuous {} \;
+        find bin/Linux/Release/xFlow-linux -name "*.deb" -exec gh release upload continuous {} \;
+        find bin/Linux/Release/xFlow-linux -name "*.AppImage" -exec gh release upload continuous {} \;
   release-for-macos:
     runs-on: macos-14
     needs: update-release
@@ -117,12 +117,12 @@ jobs:
         mkdir build
         cd build
         cmake ../ -DCMAKE_PREFIX_PATH='${{ github.workspace }}/Qt/${{env.QT_VERSION}}/clang_64/lib/cmake/Qt6' -DCMAKE_BUILD_TYPE:STRING=Release
-        cmake --build . --target xTools
-        cmake --build . --target xTools_dmg
+        cmake --build . --target xFlow
+        cmake --build . --target xFlow_dmg
     - name: Upload Release Asset for macOS
       run: |
-        ls bin/Darwin/Release/xTools
-        find bin/Darwin/Release/xTools -name "*.dmg" -exec gh release upload continuous {} \;
+        ls bin/Darwin/Release/xFlow
+        find bin/Darwin/Release/xFlow -name "*.dmg" -exec gh release upload continuous {} \;
   release-for-android:
     runs-on: ubuntu-24.04
     needs: update-release
@@ -138,5 +138,5 @@ jobs:
           ${{env.QT_ANDROID_KEYSTORE_PATH}} ${{env.QT_ANDROID_KEYSTORE_ALIAS}} ${{env.QT_ANDROID_KEYSTORE_STORE_PASS}} ${{env.QT_ANDROID_KEYSTORE_KEY_PASS}}"
       - name: Upload Release Asset for Android
         run: |
-          cmake -E copy build/armeabi_v7a/android-build/build/outputs/apk/release/android-build-release-signed.apk xtools-android-armeabi_v7a.apk
-          ls && tree build/armeabi_v7a && gh release upload continuous xtools-android-armeabi_v7a.apk
+          cmake -E copy build/armeabi_v7a/android-build/build/outputs/apk/release/android-build-release-signed.apk xFlow-android-armeabi_v7a.apk
+          ls && tree build/armeabi_v7a && gh release upload continuous xFlow-android-armeabi_v7a.apk
